# assembly-mesh-repair

./: ACTUAL_TEST_RECORDS.md  BLOCKER_LOGS.md  CHANGELOG.md  README.md  demo_verify_framework.py  pipeline.py  requirements.txt  开发日志.md
cgal_bridge/: CMakeLists.txt  autorefine_obj.cpp  check_self_intersections.cpp  obj_triangle_soup_io.h
geom/: __init__.py  aabb.py  intersection.py  octree.py  predicates.py  retriangle.py
mesh/: io_obj.py  manifold.py  mesh.py  validate.py
ops/: cgal_refine.py  pipeline_impl.py  quality.py  stitch.py  t_junction.py
tests/: demo_gmsh_refine.py  run_minimal_regression.sh  test_python_cleanup.py
tests/out_cli/more/: report.json
utils/: spatial_hash.py
